# isz

./: .gitmodules  .sops.yaml  Dockerfile  flake.nix  go.mod  go.sum  statix.toml
amdgpu/: Cargo.toml  build.rs  default.nix  rust-toolchain.toml
amdgpu/include/: bindings.h
amdgpu/macros/: Cargo.toml
amdgpu/macros/src/: lib.rs
amdgpu/src/: histogram.rs  interface.rs  lspci.rs  main.rs
ansible/: ansible.cfg  kbuild.yml  playbook.yml  steamdeck.yml  workshop.yml
atlas.comclub.org/: apcupsd.nix  configuration.nix  ddclient.nix  disko.nix  dovecot.nix  firehol.nix  home-assistant.nix  libvirt.nix  linux-edac.patch  networking.nix  nginx.nix  postfix.nix  quentin.nix  secrets.yaml  timecapsule.nix  users.nix  zpool.jwe
bedroom/: .gitattributes  bedroom.conf  configuration.nix  docker-compose.yml  secrets.yaml  telegraf.env
bedroom-pi/: configuration.nix  pnio2mqtt.nix  secrets.yaml
build-arm/: configuration.nix  disko.nix  nix-daemon.nix  secrets.yaml
dns/: .envrc  .gitattributes  comclub.org.zone  config-comclub.toml  config-isz.toml  config.toml  default.nix  dns_update.py  guest.isz.wtf.zone  hb-rights.org.zone  isz.wtf.zone  isz.zone  pyproject.toml
droid/: configuration.nix  secrets.yaml
go/: go.mod  go.sum
goddard/: amdgpu-kernel-module.nix  configuration.nix  disko.nix  kernel-acptiz-trip_table.patch  kernel-module.nix  opensnitch.nix  quentin-emacs.nix  quentin.nix  secrets.yaml  ssh.nix
heartofgold/: .gitattributes  backup.nix  configuration.nix  containers.nix  disko.nix  docker-compose.yml  jellyfin.nix  quentin.nix  rtlamr.env  secrets.yaml  telegraf.env  zpool.jwe
mac/: configuration.nix  hass-secrets.env  ngrok-secrets.env  perl.nix  python.nix  telegraf.env
mikrotik/: default.nix  mikrotik_metrics.py  mikrotik_swos_metrics.py  requirements.txt
nix/: base.nix  kernel-module.nix  networkd.nix  raspi.nix  rtlamr.nix  speedtest.nix  sshd.nix  sysext.nix  telegraf.nix  udev.nix  zwave-js-ui.nix
nix/modules/telegraf/systemd-metrics/: .envrc  Cargo.nix  Cargo.toml  default.nix  shell.nix  telegraf.nix
nix/modules/telegraf/systemd-metrics/src/: main.rs
rascsi/: configuration.nix  notes.txt
steamdeck/: configuration.nix  deck.nix  sys.nix
telegraf/: .gitignore  Makefile  base.conf.jinja  bedroom.conf.jinja  hostdocker.conf  mac.conf.jinja  steamdeck.conf.jinja  (+2 more)
workshop/dashboard/: .envrc  .gitignore  Dockerfile  MANIFEST.in  backend_pil.py  backend_pil_test.py  backend_pil_test_text.py  default.nix  graph.py  pyproject.toml  requirements.txt
workshop/dashboard/fonts/: knxt.pbm  knxt.pil
workshop/dashboard/src/dashboard/: backend_pil.py  backend_pil_test.py  backend_pil_test_text.py  graph.py
(+478 files in other folders)
