[package]
name = "amdgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "macros",
]

[dependencies]
heapless = "0.7.16"
itertools = "0.10.5"
macros = { path = "./macros" }
num-traits = "0.2.15"
uninit = "0.5.1"

[build-dependencies]
bindgen = "0.61.0"
itertools = "0.10.5"
