[package]
name = "amdgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "macros",
]

[dependencies]
env_logger = "0.10.0"
glob = "0.3.1"
heapless = "0.7.16"
influxdb2 = { version = "0.4.2", default-features = false }
itertools = "0.10.5"
log = "0.4.19"
macros = { path = "./macros" }
num-traits = "0.2.15"
paste = "1.0.12"
test-log = "0.2.12"
uninit = "0.5.1"

[build-dependencies]
bindgen = "0.61.0"
itertools = "0.10.5"
