[package]
name = "systemd-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"
serde = "1.0.163"
zbus = "3.13.1"
zbus_names = "2.5.1"
zvariant = "3.14.0"
